[package]
name = "wild-doc-server"
version = "0.0.2"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is still in development."

repository = "https://github.com/OdenShirataki/wild-doc-server"

keywords = ["database","javascript","v8","xml","html"]
categories = ["database-implementations","network-programming","template-engine"]

license = "MIT/Apache-2.0"

[dependencies]
wild-doc={path="../wild-doc" , version="0.6"}